force-app/main/default/objects/Desk_Question_Template__mdt/Desk_Question_Template__mdt.object-meta.xml
<CustomObject>
    <description>Checklist of common front-desk questions shown in Family 360. Edit in Setup &gt; Custom Metadata Types.</description>
    <label>Desk Question Template</label>
    <pluralLabel>Desk Question Templates</pluralLabel>
</CustomObject>