force-app/main/default/objects/Desk_Question_Template__mdt/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <label>Offering</label>
    <length>40</length>
    <type>Text</type>
</CustomField>